# Embedded-Systems-Final-Project

./: CMakeLists.txt  blink.c  blink.h  bmp280_i2c.c  bmp280_i2c.h  instructions.md  milkv_duo.cmake  morse.c  morse.h  publisher.c  publisher_instructor  ssd1306.c  ssd1306.h  subscriber.c
install_cv1800b_cjson/lib/: libcjson_utils.so.1.7.17
install_cv1800b_cjson/lib/cmake/cJSON/: cjson-noconfig.cmake  cjson.cmake  cjson_utils-noconfig.cmake  cjson_utils.cmake
install_cv1800b_mqtt/lib/: libmosquitto.so.2.0.18  libmosquittopp.so.1
install_cv1800b_mqtt/lib/pkgconfig/: libmosquitto.pc  libmosquittopp.pc
install_cv1800b_mqtt/sbin/: mosquitto
install_cv1800b_openssl/lib/: libcrypto.so.1.1
install_cv1800b_openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
install_cv1800b_openssl/share/doc/openssl/html/man1/: ciphers.html
install_cv1800b_openssl/share/doc/openssl/html/man3/: BIO_get_shutdown.html  BIO_meth_get_create.html  BIO_push.html  BIO_set_retry_reason.html  CMS_get0_eContentType.html  CTLOG_STORE_free.html  DSA_meth_get_mod_exp.html  DSA_set_default_method.html  EVP_CIPHER_meth_set_init.html  OSSL_STORE_supports_search.html  RSA_meth_get_finish.html  SCT_validation_status_string.html
